--- a/alphabot2/package.xml
+++ b/alphabot2/package.xml
@@ -12,8 +12,8 @@
   <test_depend>python3-pytest</test_depend>
   <test_depend>ament_copyright</test_depend>
 
-  <exec_depend>tf2_ros</depend>
-  <exec_depend>nav_msgs</depend>
+  <exec_depend>tf2_ros</exec_depend>
+  <exec_depend>nav_msgs</exec_depend>
   <exec_depend>rclpy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
